fix submenus going invisible when opened

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,7 +4,7 @@ html {
 
 body {
     box-sizing: border-box;
-    overflow: scroll
+    overflow: scroll;
 }
 
 ul {
