--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -1,5 +1,4 @@
 .top-bar {
-    overflow: scroll;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
