--- a/scss/partials/_navigation.scss
+++ b/scss/partials/_navigation.scss
@@ -1,17 +1,19 @@
 .navigation {
     display: hidden;
-    overflow: scroll;
-
     width: 100%;
+    max-height: calc(100% - var(--top-bar-height)); // make the nav scrollable when multiple
+    overflow: scroll;                               // submenus are expanded
 
     position: fixed;
-    top: auto;
+    top: var(--top-bar-height);
     left: 0;
-    margin-top: 1.5rem;
+    // margin-top: 1.5rem;
     z-index: 1000;
 
     transform: translateX(-100%);
     transition: transform .2s ease-in-out;
+
+    background-color: #fff;
 
     &-button {
         display: none;
@@ -89,7 +91,6 @@
     background-color: var(--color-primary);
 
     &, &__submenu {
-        height: auto;
         width: 100vw;
         list-style: none;
     }
@@ -106,7 +107,8 @@
         width: 100%;
         height: 100%;
 
-        transition: all .3s;
+        transition: max-height .3s,
+                    background-color .45s;
 
         & > ul {
             max-height: 0px;
@@ -178,6 +180,8 @@
     justify-content: space-around;
     width: 100%;
     padding-bottom: .75rem;
+    margin-top: 2rem;
+    
     border-bottom: 1px solid #000;
 
     &__icon {
